--- a/src/common/scss/_variables.scss
+++ b/src/common/scss/_variables.scss
@@ -36,7 +36,7 @@ $watermark-image : url('assets/watermark.png') !default;
 
 $img-playing-icon  : url('assets/btn_player.png') !default;
 $img-paused-icon  : url('assets/btn_pause.png') !default; 
-$img-playlist-icon  : url('assets/playlist_icon.png') !default; 
+$img-playlist-icon  : url('assets/playlist_icon2.png') !default; 
 $img-scroll-icon  : url('assets/scroll_icon.png') !default;
 
 //
